fixes calendar z-index and time bottom margin on event-form

--- a/app/stylesheets/_date_picker.css.sass
+++ b/app/stylesheets/_date_picker.css.sass
@@ -4,6 +4,7 @@
   display: none
   background-color: white
   width: 240px
+  z-index: 1000000
   +border-radius($defaultRadius)
   .ui-datepicker-header
     background-color: $calendarTopColor
