--- a/app/stylesheets/main_page/post_box.css.sass
+++ b/app/stylesheets/main_page/post_box.css.sass
@@ -176,6 +176,7 @@
           width: 145px
           &:first-child
             margin-right: 14px
+        margin-bottom: 5px
         
 
     form.create-group-post
